--- a/TechJobs6Persistent/Views/Employer/Create.cshtml
+++ b/TechJobs6Persistent/Views/Employer/Create.cshtml
@@ -3,15 +3,17 @@
 <form asp-controller="Employer" asp-action="ProcessCreateEmployerForm" method="post">
 
     <div class="form-group">
-        <label>Employer Name</label>
-        <input />
+        <label asp-for="Name">Employer Name</label>
+        <input asp-for="Name" />
+        <span asp-validation-for="Name" class="text-danger"></span>
     </div>
 
     <br />
 
     <div class="form-group">
-        <label>Employer Location</label>
-        <input />
+        <label asp-for="Location">Employer Location</label>
+        <input asp-for="Location"/>
+        <span asp-validation-for="Location" class="text-danger"></span>
     </div>
 
     <br />
