--- a/TechJobs6Persistent/Views/Employer/Index.cshtml
+++ b/TechJobs6Persistent/Views/Employer/Index.cshtml
@@ -2,6 +2,8 @@
 
 <h1>Employers Currently Hiring</h1>
 
+<a asp-controller="Employer" asp-action="Create">Add Employer</a>
+
 @if (Model.Count == 0)
 {
     <p>No Employers have been listed yet!</p>
