--- a/TechJobs6Persistent/Views/Job/Add.cshtml
+++ b/TechJobs6Persistent/Views/Job/Add.cshtml
@@ -1,4 +1,5 @@
 ﻿@using TechJobs6Persistent.ViewModels
+@model AddJobViewModel
 
 
 <h1>Add Job</h1>
@@ -8,6 +9,11 @@
         <label>Name</label>
         <input class="form-control" />
         <span></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="Employer">Employer</label>
+        <select asp-for="Employer" asp-items="Model.Employers"></select>
+        <a asp-controller="Employer" asp-action="Create">Add Employer</a>
     </div>
     <br />
 
